--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-elastic-carousel": "^0.11.5",
     "sass": "^1.64.2",
-    "swiper": "^10.1.0"
+    "styled-components": "^6.0.6"
   }
 }
