--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "react-dom": "18.2.0",
     "react-elastic-carousel": "^0.11.5",
     "sass": "^1.64.2",
-    "styled-components": "^6.0.6"
+    "styled-components": "^6.0.6",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0"
   }
 }
