--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-elastic-carousel": "^0.11.5",
     "react-redux": "^8.1.2",
     "sass": "^1.64.2",
-    "styled-components": "^5.0.6"
+    "styled-components": "^5.0.6",
+    "firebase": "^9.23.0",
+    "formik": "^2.4.2"
   }
 }
